plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.devwuu'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

ext {
	// 본가 com.querydsl은 5.1.0(2024)에서 멈춰 있고 Jakarta 지원이 :jakarta 분류자를 얹은 5.x가 마지막이라
	// Boot 4.1 BOM이 물어오는 Hibernate 7.4.1과 맞지 않는다. 유지되는 포크를 쓴다 — apt 분류자가 :jpa이고
	// (본가의 :jakarta와 다르다) hibernate-core를 provided로만 참조해 버전을 끌고 오지 않는다.
	querydslVersion = '7.0'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	// JSON = 유일한 원본 저장 포맷. jackson-databind + jsr310(날짜) + parameter-names 포함 (ref: data-model.md#2, ADR-1)
	implementation 'org.springframework.boot:spring-boot-starter-json'
	// Thymeleaf: 정적 HTML 생성기 용법(오프라인 실행). starter-web 미포함 (ref: plan.md#ADR-7)
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// DB = source of truth (ref: changes/0028-rdb-storage/delta.md#ADR-73). 로컬 Postgres는 docker-compose.yml.
	// JPA: Note → entries → brews → recipe/tasting 3단 중첩을 매핑으로 다룬다.
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// 스키마 소유권은 Flyway 단독 — JPA는 ddl-auto: validate로 대조만 한다(엔티티↔DDL 드리프트 검출).
	// Spring Boot 4는 자동설정을 기술별 모듈로 쪼갰다 — flyway-core만 넣으면 라이브러리는 올라오지만
	// 기동 시 마이그레이션이 아예 돌지 않는다(실측: flyway_schema_history 미생성). spring-boot-flyway가 자동설정 소유자이고
	// flyway-core를 추이 포함한다. flyway-database-postgresql은 Flyway 10+에서 분리된 Postgres 방언 모듈로, 없으면 미지원 DB로 실패한다.
	implementation 'org.springframework.boot:spring-boot-flyway'
	runtimeOnly 'org.flywaydb:flyway-database-postgresql'
	// 드라이버는 런타임에만 필요 — 애플리케이션 코드가 JDBC 벤더 타입을 참조하지 않게 컴파일 경로에서 뺀다(NFR-4).
	runtimeOnly 'org.postgresql:postgresql'

	// QueryDSL — 엔티티에 연관 매핑을 두지 않으므로(TΔ3a) 조인·조립·정렬·순서 삭제를 질의가 전담한다.
	// Spring Data의 custom fragment(NoteEntityRepositoryCustomImpl)에서만 쓰인다.
	implementation "io.github.openfeign.querydsl:querydsl-jpa:${querydslVersion}"
	annotationProcessor "io.github.openfeign.querydsl:querydsl-apt:${querydslVersion}:jpa"
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	// Slack Socket Mode 수신 (ref: plan.md#ADR-2). bolt-socket-mode가 bolt·slack-api-client 추이 포함
	implementation 'com.slack.api:bolt-socket-mode:1.49.0'
	// Socket Mode WebSocket 백엔드. bolt-socket-mode는 WS 클라이언트 구현을 포함하지 않아 별도 필요(기본 Tyrus는 javax.websocket 의존).
	// 단일 jar·무추이인 Java-WebSocket을 골라 Backend.JavaWebSocket으로 구동한다(SlackGateway). ADR-2 필수 런타임.
	implementation 'org.java-websocket:Java-WebSocket:1.6.0'

	// OpenAI 클라이언트 — LlmClient/SearchClient 구현체 뒤에만 존재 (ref: plan.md#ADR-5)
	// raw SDK로 시작. Spring AI 2.0 GA + web search production 지원 시 구현체 내부 교체 재검토 (ADR-5 재검토 트리거)
	implementation 'com.openai:openai-java:4.42.0'

	// 공식 상품 페이지 HTML fetch·상세 이미지 URL 추출 (ref: plan.md#ADR-15, changes/0006-official-page-image-ocr).
	// 정규식 파싱 대신 HTML 파서 — 문제 관측 후 도입(right-sizing). 페이지 fetch·파싱은 이미지 수집기 경계 클래스 안에만 노출(NFR-4).
	implementation 'org.jsoup:jsoup:1.22.2'

	// 카드 HTML → JPG 래스터화 = 헤드리스 Chromium (ref: plan.md#ADR-11, changes/0002-instagram-share-card).
	// flexbox·컬러 이모지·한글 웹폰트를 온전히 렌더하려면 실제 브라우저 엔진이 필요. 순수 Java(openhtmltopdf)는 flexbox 미지원.
	// Chromium 바이너리는 Playwright가 관리(첫 launch 시 다운로드 or `./gradlew installChromium` 사전설치). 렌더 엔진은 CardImageRenderer 뒤에만 노출(NFR-4).
	implementation 'com.microsoft.playwright:playwright:1.49.0'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// eval 케이스(case.yaml) 파싱 전용 — 테스트 스코프 (ref: plan.md#ADR-68, changes/0026).
	// 런타임 데이터는 전부 JSON이라 프로덕션에는 YAML이 없다. 케이스 파일만 사람이 손으로 쓰는 자산이라
	// 주석·멀티라인 발화가 필요해 YAML을 골랐고, 그 대가를 테스트 스코프에 가둔다.
	testImplementation 'tools.jackson.dataformat:jackson-dataformat-yaml'
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs.add('-Xlint:deprecation')
}

// 기본 test는 실 Chromium을 기동하는 무거운 스모크(@Tag("chromium"))를 제외한다 —
// 비용·불안정성·바이너리 다운로드 의존을 기본 실행에서 차단(백엔드 CLAUDE.md §5.2). 태깅 컨벤션 신설.
tasks.named('test') {
	useJUnitPlatform {
		// 실 외부 호출 스모크는 기본 실행에서 제외 — 무거운 Chromium(ADR-11), 비용 발생 OpenAI 호출.
		// eval(행동 회귀 — 실 LLM + 계약 단언, ADR-68)도 같은 이유로 온디맨드만: 기본 test에 API 콜 0(AC-Δ2).
		excludeTags 'chromium', 'openai', 'eval'
	}
	// 계약 스냅샷 재캡처 게이트(-Dmocha.contract.recapture=true)를 테스트 JVM으로 전달
	// (AgentModelContractSnapshotTest.recaptureSnapshot — 의도된 계약 변경 시에만).
	if (System.getProperty('mocha.contract.recapture') != null) {
		systemProperty 'mocha.contract.recapture', System.getProperty('mocha.contract.recapture')
	}
}

// 실 OpenAI 호출 스모크만 온디맨드: `./gradlew openaiTest` (.env.local의 OPENAI_API_KEY 필요, 비용 발생).
//tasks.register('openaiTest', Test) {
//	group = 'verification'
//	description = 'Run @Tag("openai") smoke tests that hit the real OpenAI API (metered, manual).'
//	testClassesDirs = sourceSets.test.output.classesDirs
//	classpath = sourceSets.test.runtimeClasspath
//	useJUnitPlatform {
//		includeTags 'openai'
//	}
//	testLogging {
//		showStandardStreams = true
//	}
//	// 실 API 관측은 코드 무변경이어도 매번 다시 돈다 — UP-TO-DATE 스킵 방지.
//	outputs.upToDateWhen { false }
//	// 프로브 모델 재정의(-Dmocha.probe.model=...)를 테스트 JVM으로 전달.
//	if (System.getProperty('mocha.probe.model') != null) {
//		systemProperty 'mocha.probe.model', System.getProperty('mocha.probe.model')
//	}
//}

// 행동 eval 하네스만 온디맨드: `./gradlew evalTest` (.env.local의 OPENAI_API_KEY 필요, 비용 발생 — ADR-68).
// 케이스(eval/cases/)는 실발화라 비커밋이다 — 없으면 실패가 아니라 스킵으로 끝난다(AC-Δ2).
tasks.register('evalTest', Test) {
	group = 'verification'
	description = 'Run @Tag("eval") behavior regression cases against the real LLM (metered, manual).'
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	useJUnitPlatform {
		includeTags 'eval'
	}
	testLogging {
		// 회차별 tool 시퀀스·거부 사유·pending diff가 표준출력으로 나온다 — 통과 회차도 남는다(AC-Δ4).
		showStandardStreams = true
	}
	// 행동 관측은 코드 무변경이어도 매번 다시 돈다 — UP-TO-DATE 스킵 방지(구 openaiTest 패턴 승계).
	outputs.upToDateWhen { false }
	// 케이스 루트·반복 수·모델 재정의를 테스트 JVM으로 전달. mocha.* 런타임 설정 키가 아니라 -D 전용(plan §5).
	['mocha.eval.cases-dir', 'mocha.eval.repetitions', 'mocha.eval.model', 'mocha.eval.segmenter-model'].each { key ->
		if (System.getProperty(key) != null) {
			systemProperty key, System.getProperty(key)
		}
	}
}

// 실 Chromium 스모크만 온디맨드 실행: `./gradlew chromiumTest` (사전에 installChromium 필요).
tasks.register('chromiumTest', Test) {
	group = 'verification'
	description = 'Run heavy @Tag("chromium") tests that boot real headless Chromium (ADR-11).'
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	useJUnitPlatform {
		includeTags 'chromium'
	}
}

// Playwright가 구동하는 Chromium 바이너리 사전 설치(~수백MB, 네트워크 필요). 첫 launch 시 자동 다운로드도 되지만 명시 설치 경로 제공.
tasks.register('installChromium', JavaExec) {
	group = 'playwright'
	description = 'Download the Chromium binary Playwright drives into ~/.cache/ms-playwright (ADR-11).'
	classpath = sourceSets.main.runtimeClasspath
	mainClass = 'com.microsoft.playwright.CLI'
	args 'install', 'chromium'
}
